-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.186 2008-02-21 22:46:13 remko Exp $
-----------------------------------------------------------------------------------------

2008-02-21	remko
	* test/psscale/ages.sh:	Fixed errors in geological names. Put some bars upside down.
	* psscale.c:		Bug fixes: (1) Inverted vertical scale, when using filled rectangles:
				Colours remained in the original order. (2) Inverted vertical or horizontal
				scale, when using rectangles with gradients: Size of rectangles followed
				original order, not inverted. (3) In reverse mode, -Eb was plotting
				foreground triangle, -Ef background triangle.
	* doc/GMT_Appendix_M.tex, doc/scripts/GMT_App_M_2.csh:	Figure added to App M to illustrate uses
				of psscale.

2008-02-20	remko
	* gmt_init.c:		TIME_SYSTEM has become a shortcut for a combination of TIME_EPOCH and
				TIME_UNIT. When used, set gmtdefs.time_unit and gmtdefs.epoch immediately.
				No longer appears in .gmtdefaults4 file.  No more predefined scale,
				rata_die, etc for time systems. Those are determined from
				gmtdefs.time_{unit,epoch} by GMT_init_time_system_structure instead.
				Bug fix: 'c' for seconds was not recognized as TIME_UNIT (expected 's',
				which is kept for backwards compatibility).
	* gmt_time_systems.h:	Removed. Information merged into gmt_init.c.
	* gmt_calclock.h:	GMT_GCAL_EPOCH has become obsolete.
	* gmt_globals.h:	Changed default time_epoch from 2000-01-01 midnight to noon.
				GMT_time_system is no longer an array. time_system removed from gmtdefs.
	* gmt.h:		Removed name, epoch, unit as part of GMT_TIME_SYSTEM struct. Epoch and
				unit can be found in GMT_DEFAULTS struct.
	* src/GNUmakefile, gmt_grdio.c, gmt_calclock.c:	Changed accordingly.
	* gmt_defaults.txt:	Updated to reflect changes.
	* .gmtdefaults_test, .gmtdefaults_*.orig, .gmtdefaults4.doc:	Removed TIME_SYSTEM.

2008-02-19	pwessel